Adjusted how the api works * Now /cipher returns a b64 encoded string and /decipher and /bruteforce consume a b64 encoded string * Bruteforce record now contains the most likely key * pom.xml adjustments * Now spring consumes application.properties * GlobalExceptionHandler created